--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,16 @@ ark-ff = "0.3.0"
 ark-poly = "0.3.0"
 ark-ec = { version = "0.3.0", features = [ "parallel" ] }
 ark-bls12-381 = "0.3.0"
-ark-bls12-377 = "0.3.0"
-ark-bn254 = "0.3.0"
+# ark-bls12-377 = "0.3.0"
+# ark-bn254 = "0.3.0"
 
 rustacuda = "0.1"
 rustacuda_core = "0.1"
 rustacuda_derive = "0.1"
 
 rand = "*" #TODO: move rand and ark dependencies to dev once random scalar/point generation is done "natively"
+
+nvtx = "*"
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
