--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-members = ["icicle-core", "bls12-381", "bls12-377", "bn254"]
+members = [
+    "icicle-core", 
+    "bls12-381", 
+    "bls12-377", 
+    "bn254",
+    "test_bn254"
+]
 
