--- a/icicle-bn254/Cargo.toml
+++ b/icicle-bn254/Cargo.toml
@@ -10,3 +10,5 @@ icicle-core = { path = "../icicle-core" }
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
+
+# [workspace]
