--- a/appl/Cargo.toml
+++ b/appl/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 
 icicle-bn254 = { path = "../icicle-bn254" }
 icicle-bls12-381 = { path = "../icicle-bls12-381" }
+icicle-core = { path = "../icicle-core" }
