--- a/icicle-core/Cargo.toml
+++ b/icicle-core/Cargo.toml
@@ -29,6 +29,8 @@ rustacuda = "0.1"
 rustacuda_core = "0.1"
 rustacuda_derive = "0.1"
 
+paste = "1.0.14"
+
 rand = "*" #TODO: move rand and ark dependencies to dev once random scalar/point generation is done "natively"
 
 [build-dependencies]
