Working toy example with build moved to cmake

--- a/appl/Cargo.toml
+++ b/appl/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 
 icicle-bn254 = { path = "../icicle-bn254" }
-# icicle-bls12-381 = { path = "../icicle-bls12-381" }
+icicle-bls12-381 = { path = "../icicle-bls12-381" }
 icicle-core = { path = "../icicle-core" }
