--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,9 @@ rand = "*" #TODO: move rand and ark dependencies to dev once random scalar/point
 cc = { version = "1.0", features = ["parallel"] }
 
 [dev-dependencies]
-"criterion" = "0.4.0"
+criterion = "0.4.0"
+halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2" }
+
 
 [features]
 default = ["bls12_381"]
